# naiCRAFTyi

./: CMakeLists.txt  README.md
shaders/: fragment.frag  vertex.vert
src/: CMakeLists.txt  main.cpp
src/GLAbstraction/: ArrayTexture.cpp  ArrayTexture.h  IBO.cpp  IBO.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Tools.cpp  Tools.h  VAO.cpp  VAO.h  VBLayout.h  VBO.cpp  VBO.h
src/Game/: Block.cpp  Block.h  GameObject.h
src/Game/Models/: CubeModel.cpp  CubeModel.h  Model.cpp  Model.h
src/Gameplay/: Game.cpp  Game.h
src/Gameplay/GameObjects/: Block.h  Chunk.cpp  Chunk.h  ChunkConstants.h  ChunkMesh.cpp  ChunkMesh.h  ChunkTypedefs.h  DirtBlock.cpp  DirtBlock.h  GameObject.h  Terrain.cpp  Terrain.h
src/Gameplay/Models/: CubeModel.cpp  CubeModel.h  Model.h
src/Gameplay/World/: Chunk.cpp  Chunk.h  ChunkConstants.h  ChunkMesh.cpp  ChunkMesh.h  ChunkTypedefs.h  Coordinates.cpp  Coordinates.h  Terrain.cpp  Terrain.h  TerrainGenertion.cpp  TerrainGenertion.h
src/Others/: KeyFunctions.h  Math.cpp  Math.h  Random.cpp  Random.h
src/Player/: Camera.cpp  Camera.h  Controller.cpp  Controller.h
